<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UniGo</string>
    <string name="settings">Ajustes</string>
    <string name="language">Idioma</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="theme">Tema</string>
    <string name="light_mode">Modo Claro</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="primary_color">Color Principal</string>
    <string name="blue">Azul</string>
    <string name="green">Verde</string>
    <string name="red">Rojo</string>
    <string name="pink">Rosa</string>
    <string name="purple">Morado</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>

    <string name="start_route">Empezar ruta</string>
    <string name="select_transport">Selecciona transporte</string>
    <string name="foot">Pie</string>
    <string name="bike">Bici</string>
    <string name="bus">Autobús</string>
    <string name="tram">Coche</string>
    <string name="select_destination">Selecciona destino</string>
    <string name="loading_weather">Cargando clima...</string>
    <string name="weather_error">Error al cargar el clima</string>
    <string name="weather_in">Tiempo en </string>

    <string name="lineas_bus">Líneas de Autobús</string>

    <string name="search_icon_desc">Icono de búsqueda</string>
    <string name="selecciona_campus">Selecciona campus</string>
    <string name="a_pie">A pie</string>

    <string name="open_nav">Abrir</string>
    <string name="close_nav">Cerrar</string>
    <string name="us_novacio">El usuario no puede estar vacío</string>
    <string name="pas_novacia">La contraseña no puede estar vacía</string>
    <string name="err_conexion">Error de conexión con el servidor</string>
    <string name="err_procesar">Error al procesar la respuesta</string>
    <string name="miperfil">Mi perfil</string>
    <string name="permisodenegado">Permiso denegado</string>
    <string name="perfilact">Perfil actualizado correctamente</string>
    <string name="rellenacampos">Debe rellenar todos los campos</string>
    <string name="contramin">Mínimo 8 caracteres, 1 mayúscula, 1 minúscula y 1 número</string>
    <string name="registrando">Registrando usuario...</string>
    <string name="lineas">Líneas y horarios</string>
    <string name="inicio">Inicio</string>
    <string name="guardando">Guardando...</string>
    <string name="sesioncerrada">Sesión cerrada correctamente</string>

    <string name="rutaCancelada">Ruta cancelada, se han restado los puntos.</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="hacer">Hacer</string>
    <string name="desruta">Si deshaces la ruta se restarán los 10 puntos correspondientes</string>
    <string name="seguro">¿Seguro?</string>
    <string name="rutaini">¡Ruta iniciada! Has ganado 10 puntos</string>
    <string name="deshacer">Deshacer</string>

    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>

    <string name="cargando">Cargando...</string>
    <string name="to_fac">Top Facultades Sostenibles</string>
    <string name="empruta">Empezar ruta</string>

    <string name="crearcuenta">Crear cuenta</string>
    <string name="tomarfoto">Hacer foto</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="usNombre">Nombre de usuario</string>
    <string name="fac">Selecciona tu facultad:</string>

    <string name="lineamin">Línea -- • -- min total</string>
    <string name="camina">Camina hasta parada • -- min (--m)</string>
    <string name="paradao">PARADA ORIGEN</string>
    <string name="espera">Espera • -- min</string>
    <string name="trayectobus">Trayecto en bus • -- min</string>
    <string name="paradad">PARADA DESTINO</string>
    <string name="hastad">Hasta destino • -- min (--m)</string>
    <string name="proxbus">Próximos buses</string>

    <string name="guardar">Guardar cambios</string>
    <string name="cerrar_s">Cerrar sesión</string>
    <string name="parada">Parada A → Parada B</string>
    <string name="nopuntos">Aún no hay puntos registrados</string>

    <string name="nolinea">No se encontró línea directa disponible</string>
    <string name="bicid">En bicicleta hasta el destino</string>
    <string name="coched">En coche hasta el destino</string>
    <string name="caminard">Caminando hasta el destino</string>
    <string name="linea">Línea </string>
    <string name="caminahasta">Camina hasta parada • </string>
    <string name="esp">Espera •  </string>
    <string name="trBus">Trayecto en bus •  </string>
    <string name="hastadestino">Hasta destino •  </string>

    <string name="puntos">Puntos</string>

</resources>