<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mi Perfil"
            android:fontFamily="@font/playfair_semibolditalic"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="75dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/img_perfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@android:color/darker_gray"
                android:contentDescription="Foto de perfil" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_hacer_foto"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomarfoto"
            android:fontFamily="@font/playfair_regular"/>
        <TextView
            android:id="@+id/tvMisPuntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre_completo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_regular"
                android:textStyle="italic"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:fontFamily="@font/playfair_regular"
                android:textStyle="italic"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usNombre"
                android:fontFamily="@font/playfair_regular"
                android:textStyle="italic"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:fontFamily="@font/playfair_regular"
                android:textStyle="italic"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fac"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/spinner_perfil_facultad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:drawable/btn_dropdown"/>

        <Button
            android:id="@+id/btn_guardar_perfil"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/guardar"
            android:fontFamily="@font/playfair_regular"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cerrar_s"
            android:fontFamily="@font/playfair_regular"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="#D32F2F" />
    </LinearLayout>
</ScrollView>